fixed obsolete 'grid-gap' by changing to 'gap'

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,11 +5,6 @@ body {
     padding: 0;
 }
 
-/* for IE grid */
-table {
-    border-collapse: collapse;
-}
-
 #margin-top {
     margin: 0;
     padding: 0;
@@ -134,9 +129,8 @@ span {
 }
 
 #grid-container {
-    display: -ms-grid;
     display: grid;
-    grid-gap: 0;
+    gap: 0;
     width: 512px;
     height: 512px;
     margin-top: 0;
